--- a/ui-one/Dockerfile
+++ b/ui-one/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
  
 # Install dependencies
-RUN npm install
+RUN yarn install
  
 # Copy the rest of your application files
 COPY . .
@@ -17,4 +17,4 @@ COPY . .
 EXPOSE 3000
  
 # Define the command to run your app
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
